finalized UI and UX design

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
               <li><a href="index.html">Blog</a></li>
               <li><a href="index.html">Careers</a></li>
             </ul>
-      <div class="nav-btn">
+      <div class="menu-btn">
         <img src="./images/icon-hamburger.svg" alt="icon-hamburger">
       </div>
       <button type="button">Request Invite</button>
